// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "component" prop to render with different container elements 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #24252E;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

<div>
  <a
    class="emotion-0"
    href="/"
    role="menuitem"
  >
    Item
  </a>
</div>
`;

exports[`should accept "component" prop to render with different container elements 2`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #24252E;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

<div>
  <a
    class="emotion-0"
    href="/"
    role="menuitem"
  >
    Item
  </a>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: #24252E;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: calc(0.5rem - 2px) 1rem;
  font-weight: bold;
  outline: none;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  display: block;
}

.emotion-0:hover {
  background: #F0F0F5;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

<div>
  <li
    class="emotion-0"
    role="menuitem"
  >
    Item
  </li>
</div>
`;
